groupTitle у привилегий, acceptedByName в чеке ККМ и receipt_used, requestId: null в кассе
